# fractalatai

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/commands/: session-close.md  session-start.md
.claude/plans/: FITNESS-STRATEGY.md  gap-c-research.md  gap-c-tiered-resolution.md  nanoclaw.md  priority-reviews.md  zenoh.md
.claude/sessions/: 02-24-26-drrp-parsing.md  02-26-26-drrp-parser-v2.md  02-26-26-taxa-refinement.md  02-26-26-taxa-regex-patterns.md  02-26-26-v2-promotion-enrichment.md  02-26-26-v2-validation-at-scale.md  06-03-26-lat-taxa-fitness-columns.md  06-05-26-eu-retained-law-support.md  06-05-26-gap-c-phase-1a.md  06-06-26-gap-c-phase-1b-assessment.md  06-06-26-gap-c-phase-2a-actors-struct.md  06-06-26-lancedb-rebuild-tier3.md  06-06-26-tier3-llm-integration.md  06-07-26-drrp-qa-bugs.md  06-07-26-hohfeldian-position-build.md  06-25-26-project-structure-review.md  sessions.db
.githooks/: pre-push
crates/fractalaw-ai/: Cargo.toml
crates/fractalaw-cli/: CLAUDE.md  Cargo.toml
crates/fractalaw-cli/config/: strength_classifier_v1.json
crates/fractalaw-cli/src/: display.rs  llm.rs  main.rs  utils.rs
crates/fractalaw-cli/src/commands/: fitness.rs  jsp.rs  misc.rs  mod.rs  pipeline.rs  sync.rs  taxa.rs
crates/fractalaw-core/: CLAUDE.md  Cargo.toml
crates/fractalaw-host/: Cargo.toml
crates/fractalaw-host/src/: lib.rs
crates/fractalaw-store/: Cargo.toml
crates/fractalaw-store/src/: duck.rs  fusion.rs  lance.rs  lib.rs  pg.rs  provision_store.rs
crates/fractalaw-sync/: Cargo.toml
crates/fractalaw-sync-cli/: Cargo.toml
crates/fractalaw-sync-cli/src/: main.rs  sync.rs
data/: export_legislation.sql
data/benchmarks/: tier2-climate-change-UK_uksi_2015_310.parquet  tier2-energy-UK_ukpga_2004_20.parquet  tier2-energy-UK_uksi_2014_1643.parquet  tier2-fire-UK_uksi_2005_1541.parquet  tier2-fire-dangerous-and-explosive-substances-UK_uksi_2014_1638.parquet  tier2-health-public-UK_asp_2005_13.parquet  tier2-hr-employment-UK_uksi_2002_2788.parquet  tier2-nuclear-radiological-UK_eudr_2013_59.parquet  tier2-ohs-UK_ukpga_1974_37.parquet  tier2-ohs-UK_uksi_1999_3242.parquet  tier2-ohs-gas-electrical-safety-UK_uksi_2016_1101.parquet  tier2-planning-infrastructure-UK_ukpga_1990_10.parquet  tier2-pollution-UK_uksi_2006_1380.parquet  tier2-public-building-safety-UK_uksi_2010_2214.parquet  tier2-public-consumer-product-safety-UK_eudr_2014_68.parquet  tier2-waste-UK_uksi_2009_890.parquet  tier2-wildlife-countryside-UK_ukpga_1981_69.parquet
data/code-review/: gemini-cascade-architecture-review.md  gemini-cascade-review-v2.md  gemini-fitness-strategy-v03-review.md  gemini-fitness-strategy-v03-system-review.md
docs/: ACTOR-DICTIONARY.md  CLASSIFICATION-CASCADE-STRATEGY-v0.3.md  CLASSIFICATION-CASCADE-STRATEGY.md  GAP-C-AGENTIC-EXTRACTION-PLAN.md  SCHEMA-DIAGRAM.md  SCHEMA.md  TAXA-PATTERN-RUNBOOK.md  ZENOH-SYNC.md  actor-dictionary.yaml  correlative-rules.yaml  drrp_classifier_v6.json  drrp_classifier_v7.json  drrp_classifier_v8.json  position_classifier_v1.json  position_classifier_v3.json
docs/architecture/: EU-LAW-SUPPORT-BRIEFING.md  README.md  SCHEMA-REFERENCE.md  SCHEMA.md  ZENOH-LAT-ARROW-IPC.md  ZENOH-LAT-DELETION-SIGNAL.md  clause_eyeball.md  gemini-briefing-gguf-export.md  ohs_eyeball.md  sertantai-zenoh-subscriber.md
docs/dictionaries/: README.md  position_classifier_v2.json
docs/howto/: gemini-api-python.md
docs/manual/: JSP-SUMMARY.md  SIGNIFICANCE-METHODOLOGY.md  SIGNIFICANCE-SUMMARY.md  SIGNIFICANCE-TECHNICAL-SPEC.md
docs/operations/: FITNESS-DICTIONARY-RUNBOOK.md  TAXA-PATTERN-RUNBOOK.md
docs/reviews/: PAGEINDEX-RESEARCH.md  gemini-actor-labels-review-20260609.md  gemini-actors-struct-review-20260607.md  gemini-cascade-strategy-review-20260607.md  gemini-cascade-v03-review-20260608.md  gemini-classifier-training-review-20260609.md  gemini-drrp-qa-plan-review-20260611.md  gemini-position-classifier-struct-review-20260611.md  gemini-production-interface-review-20260609.md  gemini-signal-decision-separation-20260622.md  gemini-sync-watch-decoupled-review-20260609.md  gemini-sync-watch-enrichment-review-20260609.md
notebooks/: finetune_gemma3_position.ipynb  kaggle_eval_cell.py  kaggle_full_pipeline.py
scripts/: actor_aliases.py  backfill_explanatory_note.py  backup_lancedb.py  benchmark_report.py  compact_lance.py  compute_dep_features.py  corpus_stats.py  correct_gold_standard.py  eval_slm_position.py  evaluate_polisher.sh  export_slm_training_data.py  finetune_runpod.py  finetune_runpod_16bit.py  gemini_actor_review.py  gemini_code_review.py  gemini_llm_batch.py  gemini_significance.py  generate_benchmarks.py  generate_benchmarks_batch.py  generate_controls.py  import_lance.rs  jsp_corpus_enrich.py  migrate_drrp_history.py  migrate_drrp_history_json.py  migrate_label_source.py  migrate_to_pg.py  pg_schema.sql  rebuild_lance_actors.py  retrain_drrp_classifier.py  runpod_merge_and_export.py  runpod_significance_batch.py  runpod_slm_batch.py  significance_approach_b.py  significance_approach_c.py  significance_approach_d.py  significance_approach_f.py  significance_approach_f2.py  significance_approach_g.py  significance_approach_h.py  significance_approach_i.py  (+7 more)
scripts/benchmarks/: benchmark_classifier_disagreements.py  benchmark_report.py  correct_gold_standard.py
(+320 files in other folders)
