[package]
name = "fractalaw-cli"
description = "CLI entry point for Fractalaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fractalaw"
path = "src/main.rs"

[dependencies]
fractalaw-core = { path = "../fractalaw-core" }
fractalaw-store = { path = "../fractalaw-store", features = ["duckdb", "datafusion", "lancedb", "pg"] }
fractalaw-ai = { path = "../fractalaw-ai", features = ["onnx"] }
fractalaw-host = { path = "../fractalaw-host", features = ["duckdb", "onnx", "lancedb"] }
arrow = { workspace = true, features = ["prettyprint"] }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
