[package]
name = "fractalaw-host"
description = "Wasmtime host runtime, micro-app supervisor, and WIT interface bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
duckdb = ["fractalaw-store/duckdb"]
lancedb = ["fractalaw-store/lancedb", "dep:serde_json"]
onnx = ["fractalaw-ai/onnx", "dep:serde_json"]

[dependencies]
fractalaw-core = { path = "../fractalaw-core" }
fractalaw-store = { path = "../fractalaw-store" }
fractalaw-ai = { path = "../fractalaw-ai" }
arrow = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true, optional = true }
