[package]
name = "fractalaw-store"
description = "DuckDB, LanceDB, and DataFusion integration for Fractalaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
duckdb = ["dep:duckdb", "dep:parquet"]
lancedb = ["dep:lancedb", "dep:parquet", "dep:futures"]
datafusion = ["dep:datafusion"]
pg = ["dep:sqlx", "dep:pgvector", "dep:serde_json", "dep:chrono"]
full = ["duckdb", "lancedb", "datafusion"]

[dependencies]
fractalaw-core = { path = "../fractalaw-core" }
arrow = { workspace = true }
async-trait = "0.1"
datafusion = { workspace = true, optional = true }
duckdb = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
lancedb = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true, features = ["sqlx"] }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
tracing = { workspace = true }

[dev-dependencies]
